--- a/AUF.EMR.MVC/Views/Shared/Layouts/_FormLayout.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Layouts/_FormLayout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="~/css/output.css" rel="stylesheet">
     <link rel="stylesheet" href="~/lib/flowbite/dist/flowbite.css"/>
     <link href="~/css/style.css" rel="stylesheet">
