--- a/AUF.EMR.MVC/Views/HouseHoldMember/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/HouseHoldMember/Edit.cshtml
@@ -11,6 +11,10 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="HouseholdMember.HouseholdId" value="@Model.HouseholdMember.HouseholdId" />
+            <input type="hidden" asp-for="HouseholdMember.NameOfFather" value="@Model.HouseholdMember.NameOfFather" />
+            <input type="hidden" asp-for="HouseholdMember.NameOfMother" value="@Model.HouseholdMember.NameOfMother" />
+            <input type="hidden" asp-for="HouseholdMember.IsNhts" value="@Model.HouseholdMember.IsNhts" />
+            <input type="hidden" asp-for="HouseholdMember.IsInSchool" value="@Model.HouseholdMember.IsInSchool" />
             <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Edit Household Member</h1>
             <hr class="mb-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
