--- a/AUF.EMR.MVC/Views/Masterlist/EditChildrenInfo.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/EditChildrenInfo.cshtml
@@ -1,7 +1,6 @@
 ﻿@model EditHouseholdMemberVM
 
 @{
-    Layout = "Layouts/_HouseholdLayout";
     Layout = "Layouts/_FormLayout";
     ViewData["Title"] = "EditChildrenInfo";
 }
@@ -13,6 +12,13 @@
             <input type="hidden" asp-for="RequestUrl" value="@Model.RequestUrl" />
             <input type="hidden" asp-for="HouseholdMember.Id" value="@Model.HouseholdMember.Id" />
             <input type="hidden" asp-for="HouseholdNo" value="@Model.HouseholdNo" />
+            <input type="hidden" asp-for="HouseholdMember.OtherRelation" value="@Model.HouseholdMember.OtherRelation" />
+            <input type="hidden" asp-for="HouseholdMember.FirstQtrClassification" value="@Model.HouseholdMember.FirstQtrClassification" />
+            <input type="hidden" asp-for="HouseholdMember.SecondQtrClassification" value="@Model.HouseholdMember.SecondQtrClassification" />
+            <input type="hidden" asp-for="HouseholdMember.ThirdQtrClassification" value="@Model.HouseholdMember.ThirdQtrClassification" />
+            <input type="hidden" asp-for="HouseholdMember.FourthQtrClassification" value="@Model.HouseholdMember.FourthQtrClassification" />
+            <input type="hidden" asp-for="HouseholdMember.RelationshipToHouseholdHead" value="@Model.HouseholdMember.RelationshipToHouseholdHead" />
+            <input type="hidden" asp-for="HouseholdMember.Remarks" value="@Model.HouseholdMember.Remarks" />
             <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Edit Children Information</h1>
             <hr class="mb-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
