--- a/AUF.EMR.MVC/Views/OralHealthClient/EditOralHealthInfo.cshtml
+++ b/AUF.EMR.MVC/Views/OralHealthClient/EditOralHealthInfo.cshtml
@@ -1,7 +1,6 @@
 ﻿@model EditHouseholdMemberVM
 
 @{
-    Layout = "Layouts/_HouseholdLayout";
     Layout = "Layouts/_FormLayout";
     ViewData["Title"] = "EditOralHealthInfo";
 }
@@ -12,7 +11,18 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="RequestUrl" value="@Model.RequestUrl" />
             <input type="hidden" asp-for="HouseholdMember.Id" value="@Model.HouseholdMember.Id" />
+            <input type="hidden" asp-for="HouseholdMember.HouseholdId" value="@Model.HouseholdMember.HouseholdId" />
             <input type="hidden" asp-for="HouseholdNo" value="@Model.HouseholdNo" />
+            <input type="hidden" asp-for="HouseholdMember.OtherRelation" value="@Model.HouseholdMember.OtherRelation" />
+            <input type="hidden" asp-for="HouseholdMember.FirstQtrClassification" value="@Model.HouseholdMember.FirstQtrClassification" />
+            <input type="hidden" asp-for="HouseholdMember.SecondQtrClassification" value="@Model.HouseholdMember.SecondQtrClassification" />
+            <input type="hidden" asp-for="HouseholdMember.ThirdQtrClassification" value="@Model.HouseholdMember.ThirdQtrClassification" />
+            <input type="hidden" asp-for="HouseholdMember.FourthQtrClassification" value="@Model.HouseholdMember.FourthQtrClassification" />
+            <input type="hidden" asp-for="HouseholdMember.RelationshipToHouseholdHead" value="@Model.HouseholdMember.RelationshipToHouseholdHead" />
+            <input type="hidden" asp-for="HouseholdMember.Remarks" value="@Model.HouseholdMember.Remarks" />
+            <input type="hidden" asp-for="HouseholdMember.NameOfFather" value="@Model.HouseholdMember.NameOfFather" />
+            <input type="hidden" asp-for="HouseholdMember.NameOfMother" value="@Model.HouseholdMember.NameOfMother" />
+            <input type="hidden" asp-for="HouseholdMember.IsInSchool" value="@Model.HouseholdMember.IsInSchool" />
             <h1 class="text-xl md:text-3xl font-bold text-gray-800 mb-4">Edit Oral Health Information</h1>
             <hr class="mb-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12">
