--- a/AUF.EMR.MVC/Views/PatientRecord/Create.cshtml
+++ b/AUF.EMR.MVC/Views/PatientRecord/Create.cshtml
@@ -71,7 +71,7 @@
                         <h6 class="text-md font-bold text-gray-800">Others</h6>
                     </div>
                     <div class="mb-4">
-                        <label asp-for="PatientRecord.TypeOfDelivery" class="block mb-2 text-sm font-medium text-gray-700">Type Of Deliver</label>
+                        <label asp-for="PatientRecord.TypeOfDelivery" class="block mb-2 text-sm font-medium text-gray-700">Type Of Delivery</label>
                         <input asp-for="PatientRecord.TypeOfDelivery" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                         <span asp-validation-for="PatientRecord.TypeOfDelivery" class="block mb-2 text-sm text-red-700"></span>
                     </div>
