Masterlist Adult Update UI

--- a/AUF.EMR.MVC/Views/Masterlist/Adolescent.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/Adolescent.cshtml
@@ -1,6 +1,7 @@
 ﻿@model HouseholdMemberListVM
 
 @{
+    Layout = "Layouts/_MasterlistLayout";
     ViewData["Title"] = "Masterlist of Adolescents";
 }
 
