--- a/AUF.EMR.MVC/Views/Masterlist/Newborn.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/Newborn.cshtml
@@ -91,6 +91,6 @@
 
 @section Scripts {
     @{
-        await Html.RenderPartialAsync("Prints/_PrintDialog", new { action = "PrintChildren", controller = "Masterlist" });
+        await Html.RenderPartialAsync("Prints/_PrintDialog");
     }
 }
