--- a/AUF.EMR.MVC/Views/PregnancyTracking/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyTracking/Edit.cshtml
@@ -58,6 +58,11 @@
                         <input asp-for="PregnancyTracking.ThirdAntenatalCheckUp" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
                         <span asp-validation-for="PregnancyTracking.ThirdAntenatalCheckUp" class="block mb-2 text-sm text-red-700"></span>
                     </div>
+                    <div class="mb-4">
+                        <label asp-for="PregnancyTracking.MoreCheckUp" class="block mb-2 text-sm font-medium text-gray-700">Other Checkup</label>
+                        <input asp-for="PregnancyTracking.MoreCheckUp" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full md:w-4/5 p-2.5" />
+                        <span asp-validation-for="PregnancyTracking.MoreCheckUp" class="block mb-2 text-sm text-red-700"></span>
+                    </div>
                 </div>
                 <div>
                     <div class="mb-4">
