--- a/AUF.EMR.MVC/Views/Masterlist/Adult.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/Adult.cshtml
@@ -2,6 +2,7 @@
 
 @{
     Layout = "Layouts/_MasterlistLayout";
+    //Layout = "Layouts/_FormLayout";
     ViewData["Title"] = "Masterlist of Adults";
 }
 
@@ -36,7 +37,7 @@
         <div class="overflow-x-auto">
             <table class="table-auto w-full">
                 <thead class="bg-gray-200">
-                        <tr class="bg-gray-200 text-sm">
+                    <tr class="bg-gray-200 text-sm">
                         <th class="px-4 py-2 text-left">HH.NO/ Family Serial No.</th>
                         <th class="px-4 py-2 text-left">Name</th>
                         <th class="px-4 py-2 text-left">Address</th>
@@ -47,11 +48,12 @@
                         <th class="px-4 py-2 text-left">Actions</th>
                     </tr>
                 </thead>
+                <!--Table Contents-->
                 <tbody>
                     @foreach (var item in Model.HouseholdMembers)
                     {
                         <tr class="text-sm">
-                        <td class="border-b border-gray-100 px-4 py-2 text-left"> @Html.DisplayFor(modelItem => item.Household.HouseholdNo)</td>
+                        <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Household.HouseholdNo)</td>
                         <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.FormattedFullName)</td>
                         <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Household.FullAddress);</td>
                         <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Sex)</td>
@@ -61,7 +63,7 @@
 
                             <!--Action Button-->
                             <td class="border-b border-gray-100 px-4 py-2 text-left">
-                                <a asp-action="EditOralHealthInfo" asp-route-id="@item.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl" class="text-yellow-300 hover:text-yellow-400 mr-2">
+                                <a asp-action="EditAdultInfo" asp-route-id="@item.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl" class="text-yellow-300 hover:text-yellow-400 mr-2">
                                     <i class="fas fa-edit"></i>
                                 </a>
                                 <a asp-action="Details" asp-controller="HouseholdMember" asp-route-id="@item.Id" asp-route-requestUrl="@Model.RequestUrl" class="text-green-400 hover:text-green-500 mr-2">
@@ -75,7 +77,7 @@
                     }
                 </tbody>
             </table>
-          </div>
+        </div>
     </div>
 </div>
 
