--- a/AUF.EMR.MVC/Views/Shared/Layouts/_MasterlistLayout.cshtml
+++ b/AUF.EMR.MVC/Views/Shared/Layouts/_MasterlistLayout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"]</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="~/css/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="~/lib/flowbite/dist/flowbite.css" />
+    <link rel="stylesheet" href="~/lib/flowbite/dist/flowbite.css"/>
     <link href="~/css/style-masterlist.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -14,7 +14,7 @@
     <header>
         @await Html.PartialAsync("Navigations/_FormNav");
     </header>
-    <div>
+    <div class="">
         <main role="main" class="">
             @await Html.PartialAsync("Navigations/_FormSideBar", ViewData["HouseholdNo"]);
             <div class="p-4 sm:ml-72">
