--- a/AUF.EMR.MVC/Views/Masterlist/SeniorCitizen.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/SeniorCitizen.cshtml
@@ -74,7 +74,7 @@
                             </td>
                             <!--Action Button-->
                             <td class="border-b border-gray-100 px-4 py-2 text-left">
-                                <a asp-action="EditOralHealthInfo" asp-route-id="@item.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl" class="text-yellow-300 hover:text-yellow-400 mr-2">
+                                <a asp-action="EditAdultInfo" asp-route-id="@item.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl" class="text-yellow-300 hover:text-yellow-400 mr-2">
                                     <i class="fas fa-edit"></i>
                                 </a>
                                 <a asp-action="Details" asp-controller="HouseholdMember" asp-route-id="@item.Id" asp-route-requestUrl="@Model.RequestUrl" class="text-green-400 hover:text-green-500 mr-2">
