Display temporary info on dashboard

--- a/AUF.EMR.MVC/Views/Dashboard/Household.cshtml
+++ b/AUF.EMR.MVC/Views/Dashboard/Household.cshtml
@@ -12,3 +12,9 @@
 <p>Adolescent #: @Model.AdolescentsCount</p>
 <p>Adult #: @Model.AdultCount</p>
 <p>Senior Citizen #: @Model.SeniorCount</p>
+<p>Pregnant #: @Model.PregnantCount</p>
+<p>WRA Forms #: @Model.WRAFormCount</p>
+<p>Pregnant Tracking Forms #: @Model.PregTrackCount</p>
+<p>Family Planning Forms #: @Model.FamilyPlanningFormsCount</p>
+<p>Patient Record Forms #: @Model.PatientRecordCount</p>
+<p>Pregnancy Record Forms #: @Model.PregnancyRecordCount</p>
