--- a/AUF.EMR.MVC/Views/Masterlist/Adult.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/Adult.cshtml
@@ -11,17 +11,15 @@
     <h1 class="text-2xl font-bold mb-8">Masterlist of Adults</h1>
 
     <!--Print Button-->
-@*     <div class="flex justify-between items-center mb-8"> *@
-        <div class="flex-1 mr-4 relative">
+    <div class="flex justify-end mb-6">
         <button type="button" onclick="print('Print', 'OralHealthClient', @Model.HouseholdNo)"
-                class="flex-shrink-0 inline-block bg-primary-50 hover:bg-primary-300 text-white font-medium py-3 px-6 rounded-lg transition duration-300 ease-in-out">
-            Print Adults
+             class="flex-shrink-0 inline-block bg-primary-50 hover:bg-primary-300 text-white font-medium py-3 px-6 rounded-lg transition duration-300 ease-in-out">
+                Print Adults
         </button>
-        </div>
-@*     </div> *@
+    </div>
+
     <!--Search Button-->
-@*     <div class="flex justify-between items-center mb-8"> *@
-        <div class="flex-1 mr-4 relative">
+        <div class="flex-1 relative mb-8">
             <input type="text" class="w-full bg-white shadow-md rounded-lg p-3 pr-10 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-green-200 border-none"
                    placeholder="Search...">
             <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none">
@@ -31,7 +29,6 @@
                 </svg>
             </div>
         </div>
-@*     </div> *@
 
     <div class="bg-white shadow-md rounded-lg p-8">
         @Html.PartialAsync("_FormNav", Model.HouseholdNo).Result
