--- a/AUF.EMR.MVC/Views/Masterlist/UnderFive.cshtml
+++ b/AUF.EMR.MVC/Views/Masterlist/UnderFive.cshtml
@@ -8,24 +8,24 @@
 <div class="container mx-auto px-4 py-8">
     <h1 class="text-2xl font-bold mb-8">Masterlist of Under-Five Children</h1>
 
-    <!--Search Button-->
-    <div class="flex justify-between items-center mb-8">
-        <div class="flex-1 mr-4 relative">
-            <input type="text" class="w-full bg-white shadow-md rounded-lg p-3 pr-10 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-green-200 border-none"
-                   placeholder="Search...">
-            <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none">
-                <svg class="h-5 w-5 text-gray-400" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
-                     stroke="currentColor">
-                    <path d="M21 21l-5.2-5.2m.8-.8a8 8 0 1 1-10.6-10.6 8 8 0 0 1 10.6 10.6z"></path>
-                </svg>
-            </div>
-        </div>
-
-        <!--Print Button-->
+    <!--Print Button-->
+    <div class="flex justify-end mb-6">
         <button type="button" onclick="print('Print', 'OralHealthClient', @Model.HouseholdNo)"
                 class="flex-shrink-0 inline-block bg-primary-50 hover:bg-primary-300 text-white font-medium py-3 px-6 rounded-lg transition duration-300 ease-in-out">
             Print Under-Five Children
         </button>
+    </div>
+
+    <!--Search Button-->
+    <div class="flex-1 relative mb-8">
+        <input type="text" class="w-full bg-white shadow-md rounded-lg p-3 pr-10 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-green-200 border-none"
+               placeholder="Search...">
+        <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none">
+            <svg class="h-5 w-5 text-gray-400" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24"
+                 stroke="currentColor">
+                <path d="M21 21l-5.2-5.2m.8-.8a8 8 0 1 1-10.6-10.6 8 8 0 0 1 10.6 10.6z"></path>
+            </svg>
+        </div>
     </div>
 
     <div class="bg-white shadow-md rounded-lg p-8">
